# mundis

./: .gitignore  AGENTS.md  Cargo.toml  README.md
apps/mundis/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/mundis/scripts/: free-dev-port.mjs
apps/mundis/src/: App.svelte  WorldStage.svelte  atlas.ts  logger.ts  main.ts  mundisApi.ts  saves.ts  styles.css  types.ts
apps/mundis/src-tauri/: Cargo.toml  tauri.conf.json
apps/mundis/src-tauri/capabilities/: default.json
apps/mundis/src-tauri/src/: lib.rs  main.rs
crates/mundis-app/: Cargo.toml
crates/mundis-app/src/: lib.rs
crates/mundis-cli/: Cargo.toml
crates/mundis-cli/src/: main.rs
crates/mundis-core/: Cargo.toml
crates/mundis-core/benches/: simulation_benchmarks.rs
crates/mundis-core/src/: civilization.rs  config.rs  export.rs  history.rs  lib.rs  scenario.rs  simulation.rs  storage.rs  world.rs
crates/mundis-core/tests/: foundation.rs
