[workspace]
members = [
    "crates/mundis-core",
    "crates/mundis-app",
    "crates/mundis-cli",
    "apps/mundis/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/nahharris/mundis"

[workspace.dependencies]
anyhow = "1.0"
bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
criterion = "0.8.2"
rand = "0.9"
rand_chacha = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = "2.11.2"
tauri-build = "2.5.1"
tempfile = "3.23"
toml = "0.9"
