[package]
name = "mundis-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bincode.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "simulation_benchmarks"
harness = false
