[package]
name = "mundis-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mundis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mundis"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
mundis-app = { path = "../../../crates/mundis-app" }
mundis-core = { path = "../../../crates/mundis-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.2", features = [] }
toml.workspace = true

[dev-dependencies]
tempfile = "3.20.0"
